if(ENABLE_BLOCKSTRUCTURED)
  add_subdirectory(blockstructured)
endif()
if(ENABLE_FINITEELEMENTS)
  add_subdirectory(finiteelements)
endif()
if(ENABLE_LOADBALANCING)
  add_subdirectory(loadbalancing)
endif()
if(ENABLE_MULTIPRECISION)
  add_subdirectory(multiprecision)
endif()
if(ENABLE_PARTICLES)
  add_subdirectory(particles)
endif()
