bin_PROGRAMS = UnitTests2d UnitTests3d \
               UnitTests2d_debug UnitTests3d_debug \
               UnitTests2d_stats UnitTests3d_stats \
               UnitTests2d_asserts UnitTests3d_asserts \
               UnitTests2d_trace UnitTests3d_trace

UnitTestsSources = main.cpp

UnitTests2d_CXXFLAGS            = $(CXXFLAGS_PEANO_2D_RELEASE)
UnitTests2d_trace_CXXFLAGS      = $(CXXFLAGS_PEANO_2D_TRACE)
UnitTests2d_asserts_CXXFLAGS    = $(CXXFLAGS_PEANO_2D_ASSERTS)
UnitTests2d_debug_CXXFLAGS      = $(CXXFLAGS_PEANO_2D_DEBUG)
UnitTests2d_stats_CXXFLAGS      = $(CXXFLAGS_PEANO_2D_STATS)

UnitTests3d_CXXFLAGS            = $(CXXFLAGS_PEANO_3D_RELEASE)
UnitTests3d_trace_CXXFLAGS      = $(CXXFLAGS_PEANO_3D_TRACE)
UnitTests3d_asserts_CXXFLAGS    = $(CXXFLAGS_PEANO_3D_ASSERTS)
UnitTests3d_debug_CXXFLAGS      = $(CXXFLAGS_PEANO_3D_DEBUG)
UnitTests3d_stats_CXXFLAGS      = $(CXXFLAGS_PEANO_3D_STATS)

UnitTests2d_SOURCES             = $(UnitTestsSources)
UnitTests2d_trace_SOURCES       = $(UnitTestsSources)
UnitTests2d_asserts_SOURCES     = $(UnitTestsSources)
UnitTests2d_debug_SOURCES       = $(UnitTestsSources)
UnitTests2d_stats_SOURCES       = $(UnitTestsSources)

UnitTests3d_SOURCES             = $(UnitTestsSources)
UnitTests3d_trace_SOURCES       = $(UnitTestsSources)
UnitTests3d_asserts_SOURCES     = $(UnitTestsSources)
UnitTests3d_debug_SOURCES       = $(UnitTestsSources)
UnitTests3d_stats_SOURCES       = $(UnitTestsSources)

UnitTests2d_LDFLAGS             = $(LDFLAGS_PEANO_RELEASE) $(LDFLAGS)
UnitTests2d_trace_LDFLAGS       = $(LDFLAGS_PEANO_TRACE) $(LDFLAGS)
UnitTests2d_asserts_LDFLAGS     = $(LDFLAGS_PEANO_ASSERTS) $(LDFLAGS)
UnitTests2d_debug_LDFLAGS       = $(LDFLAGS_PEANO_DEBUG) $(LDFLAGS)
UnitTests2d_stats_LDFLAGS       = $(LDFLAGS_PEANO_STATS) $(LDFLAGS)

UnitTests3d_LDFLAGS             = $(LDFLAGS_PEANO_RELEASE) $(LDFLAGS)
UnitTests3d_trace_LDFLAGS       = $(LDFLAGS_PEANO_TRACE) $(LDFLAGS)
UnitTests3d_asserts_LDFLAGS     = $(LDFLAGS_PEANO_ASSERTS) $(LDFLAGS)
UnitTests3d_debug_LDFLAGS       = $(LDFLAGS_PEANO_DEBUG) $(LDFLAGS)
UnitTests3d_stats_LDFLAGS       = $(LDFLAGS_PEANO_STATS) $(LDFLAGS)

UnitTests2d_LDADD               = $(LDADD_PEANO_2D_RELEASE)
UnitTests2d_trace_LDADD         = $(LDADD_PEANO_2D_TRACE)
UnitTests2d_asserts_LDADD       = $(LDADD_PEANO_2D_ASSERTS)
UnitTests2d_debug_LDADD         = $(LDADD_PEANO_2D_DEBUG)
UnitTests2d_stats_LDADD         = $(LDADD_PEANO_2D_STATS)

UnitTests3d_LDADD               = $(LDADD_PEANO_3D_RELEASE)
UnitTests3d_trace_LDADD         = $(LDADD_PEANO_3D_TRACE)
UnitTests3d_asserts_LDADD       = $(LDADD_PEANO_3D_ASSERTS)
UnitTests3d_debug_LDADD         = $(LDADD_PEANO_3D_DEBUG)
UnitTests3d_stats_LDADD         = $(LDADD_PEANO_3D_STATS)
